crates/sith_python_parser/tests/snapshots/invalid_syntax@match_classify_as_keyword_or_identifier.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/match_classify_as_keyword_or_identifier.py
---
## AST

```
Module(
    ModModule {
        range: 0..39,
        body: [
            Match(
                MatchStmt {
                    range: 0..38,
                    subject: Starred(
                        StarredExpr {
                            range: 6..10,
                            value: Name(
                                NameExpr {
                                    range: 7..10,
                                    id: Name("foo"),
                                    ctx: Load,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 27..38,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 32..33,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 35..38,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 35..38,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match *foo:  # Keyword
  |       ^^^^ Syntax Error: Starred expression cannot be used here
2 |     case _: ...
  |
