crates/sith_python_parser/tests/snapshots/invalid_syntax@match_expected_colon.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/match_expected_colon.py
---
## AST

```
Module(
    ModModule {
        range: 0..29,
        body: [
            Match(
                MatchStmt {
                    range: 0..28,
                    subject: List(
                        ListExpr {
                            range: 6..12,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 7..8,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 10..11,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 17..28,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 22..23,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 25..28,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 25..28,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match [1, 2]
  |             ^ Syntax Error: Expected ':', found newline
2 |     case _: ...
  |
