crates/sith_python_parser/tests/snapshots/invalid_syntax@match_stmt_expected_case_block.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/inline/err/match_stmt_expected_case_block.py
---
## AST

```
Module(
    ModModule {
        range: 0..61,
        body: [
            Match(
                MatchStmt {
                    range: 0..13,
                    subject: Name(
                        NameExpr {
                            range: 6..7,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                },
            ),
            Assign(
                AssignStmt {
                    range: 13..18,
                    targets: [
                        Name(
                            NameExpr {
                                range: 13..14,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 17..18,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Match(
                MatchStmt {
                    range: 19..32,
                    subject: Name(
                        NameExpr {
                            range: 25..26,
                            id: Name("x"),
                            ctx: Load,
                        },
                    ),
                    cases: [],
                },
            ),
            Match(
                MatchStmt {
                    range: 32..60,
                    subject: Name(
                        NameExpr {
                            range: 38..39,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 49..60,
                            pattern: MatchAs(
                                PatternMatchAs {
                                    range: 54..55,
                                    pattern: None,
                                    name: None,
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    ExprStmt {
                                        range: 57..60,
                                        value: EllipsisLiteral(
                                            EllipsisLiteralExpr {
                                                range: 57..60,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | match x:
2 |     x = 1
  |     ^ Syntax Error: Expected `case` block
3 | match x:
4 |     match y:
  |


  |
1 | match x:
2 |     x = 1
3 | match x:
  |  Syntax Error: Expected a statement
4 |     match y:
5 |         case _: ...
  |


  |
2 |     x = 1
3 | match x:
4 |     match y:
  |     ^^^^^ Syntax Error: Expected `case` block
5 |         case _: ...
  |


  |
4 |     match y:
5 |         case _: ...
  |
